ChangeLog for UML2oWFN

Version 1.03 (in progress)
============

+ extend log output, log now contains statistical data about the each process: number of nodes, number of edges, average number of incoming edges, average number of outgoing edges
+ added parameter "-p anon" to anonymize the process output by enumerating places (p1, p2, ...) and transitions (t1, t2, ...) before writing to disk
+ added parameter "-a wfNet" to translate processes into Aalst-workflow-nets, the translation assumes an AND-join on all end- and stop-nodes of the process
+ stored reduction level in the scripts/Makefile in variable "REDUCTION-LEVEL", so the reduction level can be set at the make call
+ added new scripts/Makefile target "translateweak" that uses the "-a removePinsets" option,  
+ added new analysis switch "-a removePinsets" that relaxes the process termination semantics by requiring that only the control-flow terminates, but that data may still be pending at the process output
+ updated documentation and included .pdf creation
+ overrode the Petri net reduction method in the ExtendedWorkflowNet class, now implementing reduce_series_places (level 1) and reduce_identical_places (level 3)
+ moved re-implementation of reduce_series_places and reduce_series_transitions to ExtendedWorkflowNet and restored the original implementation
+ added routine to remove empty output pinsets which is needed for a deadlock-based soundness analysis of Petri nets, the routine is not used in this version because for BOM processes, only the modelchecking-based soundness analysis yields correct results (the inner of the process must be empty).
+ changed task file naming scheme to 'net.lola.<tasktype>.task'
+ added parameter "-a safe" to check for safeness of a net using LoLA with state predicates, this parameter can be used together with "-a soundness" and "-a deadlocks"