@@ -1,6 +1,7 @@
 @heading Version 1.03 (in progress)
 
 @itemize
+@item added parameter @samp{-a orJoin} to translate process for soundness analysis assuming an implicit OR-join on the control-flow
 @item extend log output, log now contains statistical data about the each process: number of nodes, number of edges, average number of incoming edges, average number of outgoing edges
 @item added parameter @samp{-p anon} to anonymize the process output by enumerating places (p1, p2, ...) and transitions (t1, t2, ...) before writing to disk
 @item added parameter @samp{-a wfNet} to translate processes into Aalst-workflow-nets, the translation assumes an AND-join on all end- and stop-nodes of the process
